Fix apad square buttons not showing press feedback

--- a/gamecanvas.css
+++ b/gamecanvas.css
@@ -105,7 +105,7 @@ html {
   left: calc(var(--controls-size) * -0.9);
 }
 
-#dpad path:not(.active), #apad > *:not(.active) {
+#dpad path:not(.active), #apad .apadBtn:not(.active) {
   opacity: 0.4;
 }
 
